--- a/index.html
+++ b/index.html
@@ -141,11 +141,21 @@ function signin() {
             alert ("Please enter a valid credentials");
             }
 
+            // if (validUser) {
+            //     location.href = "secondPage.html";
+            // } else {
+            //     return false;
+            // }
+            // Inside the signin function
             if (validUser) {
-                location.href = "secondPage.html";
-            } else {
+                const pwToPass = validUser.pw;
+                const url = `secondPage.html?pw=${encodeURIComponent(pwToPass)}`;
+                location.href = url; 
+            } 
+            else {
                 return false;
             }
+
 }
     </script>
 </body>
